@@ -1,0 +1,12 @@
+Title: Notifications / Alert handling: Fixed configuring nth notifications without state changes
+Level: 1
+Component: notifications
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i2
+Date: 1476960641
+
+This is especially important for the Enterprise Edition specific alert handling when constructing
+rules matching on the nth check attempt. But it has been added as generic option for notifications
+and alert handling.
